add flake8 to requirements.txt & basic .flake8 configuration file

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,9 @@ asgiref==3.8.1
 Django==5.1.7
 django-debug-toolbar==5.1.0
 django-extensions==3.2.3
+flake8==7.1.2
+mccabe==0.7.0
+pycodestyle==2.12.1
+pyflakes==3.2.0
 sqlparse==0.5.3
 tzdata==2025.2
